--- a/services/event-bus/Cargo.toml
+++ b/services/event-bus/Cargo.toml
@@ -13,3 +13,4 @@ serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 uuid = { version = "1.8.0", features = ["v4", "serde"] }
 request = { workspace = true }
+types = { workspace = true }
