--- a/services/comments/Cargo.toml
+++ b/services/comments/Cargo.toml
@@ -12,6 +12,7 @@ env_logger = "0.11.3"
 serde_json = "1.0"
 reqwest = { version = "0.12.2", features = ["json"] }
 log = "0.4.21"
+rayon = "1.10"
 uuid = { version = "1.8.0", features = ["v4", "serde"] }
 request = { workspace = true }
 types = { workspace = true }
